# flow-to-stock

./: .env.example  LICENSE  README.md  app.py  flow-to-stock.command  pyproject.toml
docs/plans/: 2026-02-13-flow-to-stock-design.md  2026-02-13-flow-to-stock-implementation.md
flow-to-stock.app/Contents/: Info.plist
flow-to-stock.app/Contents/MacOS/: launcher
flow-to-stock.app/Contents/Resources/: AppIcon.icns
src/: aging.py  cli.py  llm_analyzer.py  models.py  notion_client.py  slack_client.py
tests/: test_aging.py  test_cli.py  test_llm_analyzer.py  test_models.py  test_notion_client.py  test_slack_client.py
