[project]
name = "flow-to-stock"
version = "0.1.0"
description = "Convert Slack discussions into actions and insights"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "streamlit>=1.40.0",
    "slack-sdk>=3.33.0",
    "notion-client>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
